Displaying the projects

--- a/index.html
+++ b/index.html
@@ -5,8 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d6cf7c96ee.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    hello world.
+    <div class="contacts">
+        <ul>
+            <li><i class="fa-brands fa-github"></i></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-solid fa-envelope"></i></li>
+        </ul>
+    </div>
+    <header class="flex center container">
+        <div>
+        </div>
+        <div>
+            <button class="link">
+                Sprache
+            </button>
+            <button class="button">
+                Kontaktieren
+            </button>
+        </div>
+    </header>
+    <div id="name" class="container center font-0">
+        <h1>Eugen Bondarev</h1>
+        <h4 class="subtitle">Software-Entwickler</h4>
+    </div>
+    <div class="container center">
+        <h2>Meine Projekte</h2>
+        <div class="add-border list-item project">
+            <h3 class="project__name">
+                Ein Programm fürs Teilen von Dateien innerhalb eines WLAN-Netzes
+            </h3>
+            <div class="description">
+                <img class="preview" src="images/projects/homeNetShare.png" alt="">
+                <div class="text">
+                    <h3 class="tech">Tech-Stack: Java, OpenGL, ImGui</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, minima corrupti expedita, rem fugit recusandae ad dignissimos illum aperiam at ut rerum ullam voluptas est explicabo dolores itaque maiores dicta?
+                </div>
+            </div>
+        </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+        <div class="project"> first proj </div>
+    </div>
 </body>
 </html>
