--- a/index.html
+++ b/index.html
@@ -9,90 +9,72 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"> -->    
+    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;900&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/d6cf7c96ee.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-    <script src="scripts/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" type="text/javascript"></script>
+
+    <link href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet" type="text/css" />
+    <link href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" rel="stylesheet" type="text/css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
 <body>
-    <div class="contacts">
-        <ul>
-            <li><i class="fa-brands fa-github"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
-            <li><i class="fa-solid fa-envelope"></i></li>
-        </ul>
-    </div>
-    <header class="flex center container">
-        <div>
+    <div id="app">
+        <div class="contacts">
+            <ul>
+                <li><i class="fa-brands fa-github"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-solid fa-envelope"></i></li>
+            </ul>
         </div>
-        <div>
-            <button class="link">
-                Sprache
-            </button>
-            <button class="button">
-                Kontaktieren
-            </button>
+        <header class="flex center container">
+            <div>
+            </div>
+            <div>
+                <button class="link">
+                    Sprache
+                </button>
+                <button class="button">
+                    Kontaktieren
+                </button>
+            </div>
+        </header>
+        <div id="name" class="container center font-0">
+            <h1>Eugen Bondarev</h1>
+            <h4 class="subtitle">Software-Entwickler</h4>
         </div>
-    </header>
-    <div id="name" class="container center font-0">
-        <h1>Eugen Bondarev</h1>
-        <h4 class="subtitle">Software-Entwickler</h4>
-    </div>
-    <div class="container center">
-        <h2>Meine Projekte</h2>
-        <div class="project">
-            <div class="project__name">
-                <h3 class="no-margin">
-                    Ein Programm fürs Teilen von Dateien innerhalb eines WLAN-Netzes
-                </h3>
-                <a href="https://github.com/eugen-bondarev/homeNetShare" target="_blank" class="button">
-                    <i class="fa-xl fa-brands fa-github"></i>
-                </a>
-            </div>
-            <div class="description">
-                <div class="preview">
-                    <img src="images/projects/homeNetShare_0.png" alt="">
-                    <img src="images/projects/homeNetShare_1.png" alt="">
+        <div class="container center">
+            <h2>Meine Projekte</h2>
+            <div class="project" v-for="project in projects">
+                <div class="project__name">
+                    <h3 class="no-margin">
+                        {{ project.title }}
+                    </h3>
+                    <div>
+                        <a v-for="link in project.links" :href="link.href" target="_blank" class="button">
+                            <i class="fa-xl" :class="link.cls"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="text">
-                    <h3 class="tech">Tech-Stack: Java, OpenGL, ImGui</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, minima corrupti expedita, rem fugit recusandae ad dignissimos illum aperiam at ut rerum ullam voluptas est explicabo dolores itaque maiores dicta?
-                </div>
-            </div>
-        </div>
-
-        <div class="project">
-            <div class="project__name">
-                <h3 class="no-margin">
-                    Besondere Lernleistung im Fach Informatik (Abitur 2022)
-                </h3>
-
-                <div>
-                    <a href="https://github.com/eugen-bondarev/homeNetShare" target="_blank" class="button">
-                        <i class="fa-xl fa-solid fa-file-lines"></i>
-                    </a>
-                    <a href="https://github.com/eugen-bondarev/homeNetShare" target="_blank" class="button">
-                        <i class="fa-xl fa-brands fa-github"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="description">
-                <div class="preview">
-                    <img src="images/projects/homeNetShare_0.png" alt="">
-                    <img src="images/projects/homeNetShare_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3 class="tech">Tech-Stack: C++, eigen, OpenGL, ImGui</h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, minima corrupti expedita, rem fugit recusandae ad dignissimos illum aperiam at ut rerum ullam voluptas est explicabo dolores itaque maiores dicta?
+                <div class="description">
+                    <div class="preview">
+                        <img v-for="image in project.gallery" :src="image" alt="">
+                    </div>
+                    <div class="text">
+                        <h3 class="tech">
+                            Tech-Stack:
+                            <div v-for="item in project.techStack" class="tech__el">{{ item }}</div>
+                        </h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, minima corrupti expedita, rem fugit recusandae ad dignissimos illum aperiam at ut rerum ullam voluptas est explicabo dolores itaque maiores dicta?
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="scripts/main.js"></script>
 </html>
