Design updated a bit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eugen Bondarev</title>
     <link rel="stylesheet" href="style/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,9 +35,9 @@
             <div>
             </div>
             <div>
-                <button class="link">
+                <!-- <button class="link">
                     Sprache
-                </button>
+                </button> -->
                 <button class="button">
                     Kontaktieren
                 </button>
@@ -69,7 +69,7 @@
                             Tech-Stack:
                             <div v-for="item in project.techStack" class="tech__el">{{ item }}</div>
                         </h3>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, minima corrupti expedita, rem fugit recusandae ad dignissimos illum aperiam at ut rerum ullam voluptas est explicabo dolores itaque maiores dicta?
+                        {{ project.description }}
                     </div>
                 </div>
             </div>
