--- a/index.html
+++ b/index.html
@@ -25,19 +25,14 @@
 <body>
     <div id="app">
         <div class="contacts">
-            <ul>
-                <li><i class="fa-brands fa-github"></i></li>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-solid fa-envelope"></i></li>
-            </ul>
+            <a href="https://github.com/eugen-bondarev" target="_blank" class="button"><i class="fa-brands fa-github"></i></a>
+            <a class="button"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:eug.bondarev@gmail.com" class="button"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <header class="flex center container">
             <div>
             </div>
             <div>
-                <!-- <button class="link">
-                    Sprache
-                </button> -->
                 <button class="button">
                     Kontaktieren
                 </button>
