The last project is described, too

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
         <div id="name" class="container center font-0">
             <h1 class="text-transform--uppercase">Eugen Bondarev</h1>
-            <h4 class="text-transform--uppercase subtitle">Softwareentwickler</h4>
+            <h4 class="text-transform--uppercase subtitle">Web- und Softwareentwickler</h4>
         </div>
         <div class="container center">
             <div class="menu">
